solve: boj_베스트셀러